--- a/MicroRAM.cabal
+++ b/MicroRAM.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 98d54a340a2f324f316d1ad78df349b14145031f3fcbda93ab6f05b883450c64
+-- hash: 108cb67cbf77f0282b137cc69cab8b224a1a72cfb1c5e7cdbf1dc43e4f828b3d
 
 name:           MicroRAM
 version:        0.1.0.0
@@ -27,7 +27,10 @@ source-repository head
 
 library
   exposed-modules:
+      Circuit.CircuitBuilder
+      Circuit.CircuitIR
       Circuit.MAC
+      Circuit.Processor
       Compiler.Assembler
       Compiler.CodeGenerator
       Compiler.Compiler
@@ -86,6 +89,29 @@ executable MicroRAM-exe
     , mtl
   default-language: Haskell2010
 
+test-suite MicroRAM-circuit-test
+  type: exitcode-stdio-1.0
+  main-is: CircuitSpec.hs
+  other-modules:
+      CircuitBuilderSpec
+      CircuitIRSpec
+      ProcessorSpec
+      Paths_MicroRAM
+  hs-source-dirs:
+      test/Circuit
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N -main-is Circuit.CircuitSpec
+  build-depends:
+      MicroRAM
+    , base >=4.7 && <5
+    , bytestring
+    , containers
+    , llvm-hs-pure
+    , mtl
+    , tasty
+    , tasty-hunit
+    , tasty-smallcheck
+  default-language: Haskell2010
+
 test-suite MicroRAM-compiler-test
   type: exitcode-stdio-1.0
   main-is: CompilerSpec.hs
@@ -93,7 +119,7 @@ test-suite MicroRAM-compiler-test
       Paths_MicroRAM
   hs-source-dirs:
       test/Compiler
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N -main-is CompilerSpec
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N -main-is Compiler.CompilerSpec
   build-depends:
       MicroRAM
     , base >=4.7 && <5
