--- a/package.yaml
+++ b/package.yaml
@@ -72,7 +72,20 @@ tests:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
-    - -main-is CompilerSpec
+    - -main-is Compiler.CompilerSpec
+    dependencies:
+    - MicroRAM
+    - tasty
+    - tasty-hunit
+    - tasty-smallcheck
+  MicroRAM-circuit-test:
+    main:                CircuitSpec.hs
+    source-dirs:         test/Circuit
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    - -main-is Circuit.CircuitSpec
     dependencies:
     - MicroRAM
     - tasty
