--- a/MicroRAM.cabal
+++ b/MicroRAM.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 85ab858b61836b93e40868fc2fb1d289faef6a81eb91726b9628e4389ff8971f
+-- hash: b67160087fb036d1ef129c72bf6bd2d5134b2c844797076a7cd8da2ddf190417
 
 name:           MicroRAM
 version:        0.1.0.0
@@ -44,6 +44,7 @@ library
       Compiler.Try
       Lib
       LLVMutil.LLVMexamples
+      LLVMutil.LLVMIO
       LLVMutil.LLVMutil
       MicroRAM.MicroRAM
       MicroRAM.MRAMInterpreter
@@ -61,6 +62,9 @@ library
     , llvm-hs
     , llvm-hs-pure
     , mtl
+    , tasty
+    , tasty-hunit
+    , tasty-smallcheck
   default-language: Haskell2010
 
 executable MicroRAM-compile
@@ -80,6 +84,9 @@ executable MicroRAM-compile
     , llvm-hs
     , llvm-hs-pure
     , mtl
+    , tasty
+    , tasty-hunit
+    , tasty-smallcheck
   default-language: Haskell2010
 
 executable MicroRAM-exe
@@ -99,6 +106,9 @@ executable MicroRAM-exe
     , llvm-hs
     , llvm-hs-pure
     , mtl
+    , tasty
+    , tasty-hunit
+    , tasty-smallcheck
   default-language: Haskell2010
 
 test-suite MicroRAM-circuit-test
@@ -129,6 +139,7 @@ test-suite MicroRAM-compiler-test
   type: exitcode-stdio-1.0
   main-is: CompilerSpec.hs
   other-modules:
+      InstructionSelectionSpec
       Paths_MicroRAM
   hs-source-dirs:
       test/Compiler
