--- a/MicroRAM.cabal
+++ b/MicroRAM.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 047049c6505396366874f3472d15c9329c7896eb3c3ef1820e48edf64de4e639
+-- hash: 78266882b299f387ffe9cb7a8678cf92cd75d38d504b92026111e2ada8c16982
 
 name:           MicroRAM
 version:        0.1.0.0
@@ -43,6 +43,8 @@ library
       Compiler.RemoveLabels
       Compiler.Stacking
       Compiler.Try
+      Frontend.BashCalls
+      Frontend.ClangCaller
       Lib
       LLVMutil.LLVMexamples
       LLVMutil.LLVMIO
@@ -63,32 +65,11 @@ library
     , llvm-hs
     , llvm-hs-pure
     , mtl
+    , process
     , tasty
     , tasty-hunit
     , tasty-smallcheck
-    , utf8-string
-  default-language: Haskell2010
-
-executable MicroRAM-compile
-  main-is: Compile.hs
-  other-modules:
-      CompileBlock
-      Main
-      Paths_MicroRAM
-  hs-source-dirs:
-      app
-  ghc-options: -main-is Compile -threaded -rtsopts -with-rtsopts=-N
-  build-depends:
-      MicroRAM
-    , base >=4.7 && <5
-    , bytestring
-    , containers
-    , llvm-hs
-    , llvm-hs-pure
-    , mtl
-    , tasty
-    , tasty-hunit
-    , tasty-smallcheck
+    , text
     , utf8-string
   default-language: Haskell2010
 
@@ -97,6 +78,7 @@ executable MicroRAM-exe
   other-modules:
       Compile
       CompileBlock
+      Run
       Paths_MicroRAM
   hs-source-dirs:
       app
@@ -109,9 +91,63 @@ executable MicroRAM-exe
     , llvm-hs
     , llvm-hs-pure
     , mtl
+    , process
     , tasty
     , tasty-hunit
     , tasty-smallcheck
+    , text
+    , utf8-string
+  default-language: Haskell2010
+
+executable compile
+  main-is: Compile.hs
+  other-modules:
+      CompileBlock
+      Main
+      Run
+      Paths_MicroRAM
+  hs-source-dirs:
+      app
+  ghc-options: -main-is Compile -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      MicroRAM
+    , base >=4.7 && <5
+    , bytestring
+    , containers
+    , llvm-hs
+    , llvm-hs-pure
+    , mtl
+    , process
+    , tasty
+    , tasty-hunit
+    , tasty-smallcheck
+    , text
+    , utf8-string
+  default-language: Haskell2010
+
+executable run
+  main-is: Run.hs
+  other-modules:
+      Compile
+      CompileBlock
+      Main
+      Paths_MicroRAM
+  hs-source-dirs:
+      app
+  ghc-options: -main-is Run -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      MicroRAM
+    , base >=4.7 && <5
+    , bytestring
+    , containers
+    , llvm-hs
+    , llvm-hs-pure
+    , mtl
+    , process
+    , tasty
+    , tasty-hunit
+    , tasty-smallcheck
+    , text
     , utf8-string
   default-language: Haskell2010
 
@@ -134,9 +170,11 @@ test-suite circuit-test
     , llvm-hs
     , llvm-hs-pure
     , mtl
+    , process
     , tasty
     , tasty-hunit
     , tasty-smallcheck
+    , text
     , utf8-string
   default-language: Haskell2010
 
@@ -157,9 +195,11 @@ test-suite compiler-test
     , llvm-hs
     , llvm-hs-pure
     , mtl
+    , process
     , tasty
     , tasty-hunit
     , tasty-smallcheck
+    , text
     , utf8-string
   default-language: Haskell2010
 
@@ -179,8 +219,10 @@ test-suite interpreter-test
     , llvm-hs
     , llvm-hs-pure
     , mtl
+    , process
     , tasty
     , tasty-hunit
     , tasty-smallcheck
+    , text
     , utf8-string
   default-language: Haskell2010
