--- a/stack.yaml
+++ b/stack.yaml
@@ -40,6 +40,9 @@ packages:
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
 #
 extra-deps:
+- haggle-0.1.0.0
+- monad-primitive-0.1
+- ref-tf-0.4.0.2
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
