--- a/package.yaml
+++ b/package.yaml
@@ -29,11 +29,15 @@ dependencies:
 - tasty
 - tasty-hunit
 - tasty-smallcheck
+- smallcheck
 - utf8-string
 - process
 - split
-- pptable
+- pptable # Pretty print Trace
 - boxes
+- aeson # Remove when not used anymore
+- serialise
+- cborg
 
 library:
   source-dirs: src
@@ -97,17 +101,31 @@ tests:
     - tasty
     - tasty-hunit
     - tasty-smallcheck
-  circuit-test:
-    main:                CircuitSpec.hs
-    source-dirs:         test/Circuit
+  ouput-test:
+    main:                OutputSpec.hs
+    source-dirs:         test/Output
     ghc-options:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
-    - -main-is Circuit.CircuitSpec
+    - -main-is Output.OutputSpec
     dependencies:
     - MicroRAM
     - tasty
     - tasty-hunit
     - tasty-smallcheck
+
+#  circuit-test:
+#    main:                CircuitSpec.hs
+#    source-dirs:         test/Circuit
+#    ghc-options:
+#    - -threaded
+#    - -rtsopts
+#    - -with-rtsopts=-N
+#    - -main-is Circuit.CircuitSpec
+#    dependencies:
+#    - MicroRAM
+#    - tasty
+#    - tasty-hunit
+#    - tasty-smallcheck
   
