--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 .stack-work/
 *~
+*#*#
 /dist
 /dist-newstyle
-#*#
-*/#*#
+**/#*#
 .#*
 */.#*
 *.DS_Store
@@ -14,3 +14,8 @@ Cprograms/*.ll
 */*/*.nothing
 MicroRAM.cabal
 temp/*
+*.ll-e
+*.link.bc
+*.c.o
+*.c.opt.bc
+test/programs/**/*.c.bc
