--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,23 +1,37 @@
-image: fpco/stack-build:lts-8.15
+image: fpco/stack-build:lts-11.15
 
-variables:
-  STACK_ROOT: "${CI_PROJECT_DIR}/.stack"
+# If you have dependencies that aren't included in the Dockerfile.
+# You might also consider making a new Docker image based on stack-build
+# and pushing it to GitLab's registry to save on build time.
+# before_script:
+#     - apt-get update -y
+#     - apt-get install -y -qq my-dependencies
 
-cache:
-  paths:
-    - .stack
-    - .stack-work
-
+# https://docs.gitlab.com/ee/ci/yaml/#stages
+# jobs of the same stage are executed in parallel
 stages:
   - build
   - test
 
-build:
-  stage: build
-  script:
-    - stack build
+# https://docs.gitlab.com/ee/ci/variables/#using-the-ci-variables-in-your-job-scripts
+variables:
+    STACK_ROOT: "${CI_PROJECT_DIR}/.stack-root"
 
-unit-test:
-  stage: test
+build:
+  # https://docs.gitlab.com/ee/ci/yaml/#cache
+  cache:
+    key: "$CI_JOB_NAME"
+    paths:
+      - .stack-work/
+      - .stack-root/
   script:
-    - stack
+    - stack --no-terminal build
+
+test:
+  cache:
+    key: "$CI_JOB_NAME"
+    paths:
+      - .stack-work/
+      - .stack-root/
+  script:
+    - stack --no-terminal test
