--- a/stack.yaml
+++ b/stack.yaml
@@ -43,6 +43,7 @@ extra-deps:
 - haggle-0.1.0.0
 - monad-primitive-0.1
 - ref-tf-0.4.0.2
+- dom-lt-0.2.2.1
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
