Fix passing of flags

--- a/package.yaml
+++ b/package.yaml
@@ -20,7 +20,7 @@ extra-source-files:
 description:         Please see the README on GitHub at <https://github.com/githubuser/MicroRAM#readme>
 
 flags:
-  NO_LLVM:
+  no-llvm:
     description: Remove all dependencies to the LLVM project.
     manual: true
     default: false
@@ -62,10 +62,12 @@ dependencies:
 - dom-lt
 - parsec
 when:
-- condition: flag(NO_LLVM)
+- condition: flag(no-llvm)
   then:
     dependencies:
     - llvm-hs-pure
+    cpp-options:
+    - -DNO_LLVM
   else:
     dependencies:
     - llvm-hs-pure
@@ -79,8 +81,6 @@ executables:
   compile:
     main:                Compile.hs
     source-dirs:         app
-    cpp-options:
-    - "-DNO_LLVM"
     ghc-options:
     - -main-is Compile
     dependencies:
